--- a/themes/jms_molla/assets/scss/demos/demo-3.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-3.scss
@@ -29,6 +29,11 @@ $secondary-color: #bf913d;
 		}
 	}
 }
+.title {
+	font-weight: 600;
+	font-size: 2.4rem;
+	letter-spacing: -.03em;
+}
 .product-buttons .btn-icon{
 	&:hover{
 		color: #333;
@@ -140,11 +145,170 @@ $secondary-color: #bf913d;
 	}
 	.h3-hotdeal{
 		padding: 0;
+		margin-left: auto;
+		max-width: calc((100% - 20px)/2);
+		.owl-carousel.customs .owl-stage-outer{
+			margin: 0;
+			padding: 0;
+		}
+	}
+	.pb-text-content{
+		font-size: 1.6rem;
+		font-weight: 300;
+		letter-spacing: -.01em;
+	}
+	.deal{
+		margin-right: auto;
+		max-width: calc((100% - 20px)/2);
+		.pb-heading{
+			font-weight: 500;
+			line-height: 1.1;
+			letter-spacing: -.01em;
+			margin-bottom: .2rem;
+			max-width: 240px;
+		}
+		.pb-text-content{
+			font-weight: 300;
+			line-height: 1.25;
+			letter-spacing: 0;
+			margin-bottom: .5rem;
+			max-width: 240px;
+		}
+		.product-title{
+			max-width: 240px;
+			margin-bottom: .7rem;
+			a{
+				text-transform: initial;
+			}
+		}
+		.product-price {
+		    font-weight: 300;
+		    font-size: 2rem;
+		    margin-bottom: .4rem;
+		}
+		.btn-link{
+			padding: 0;
+		}
 	}
 }
 .h3-hotdeal{
 	.countdown{
 		display: none;
+	}
+}
+
+.pb-countdown-time {
+	margin-bottom: 0;
+	margin-left: -.8rem;
+	.countdown-row .countdown-section {
+		display: block;
+		text-align: center;
+		float: left;
+	}
+	.countdown-section {
+		position: relative;
+		font-weight: 400;
+		font-size: 1rem;
+		line-height: 1;
+		padding: .9rem .5rem .3rem;
+		margin-left: .8rem;
+		margin-right: .8rem;
+		background-color: #fcb941;
+		border-radius: .3rem;
+		border: none;
+		margin-bottom: 2rem;
+		min-width: 4rem;
+		&:not(:last-child):after {
+			color: #333333;
+		    content: ':';
+		    display: inline-block;
+		    font-weight: 400;
+		    font-size: 20px;
+		    line-height: 1;
+		    position: absolute;
+		    left: 100%;
+		    margin-left: 6px;
+		    margin-top: -1px;
+		    top: 50%;
+		    transform: translateY(-50%);
+		    -ms-transform: translateY(-50%);
+		}
+	}
+	.countdown-period {
+		position: absolute;
+		left: 0;
+		right: 0;
+		text-align: center;
+		bottom: -2rem;
+		display: block;
+		font-weight: 400;
+		color: #333333;
+		text-transform: lowercase;
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+	.countdown-amount {
+		display: inline-block;
+		color: #fff;
+		font-weight: 500;
+		font-size: 2.4rem;
+		line-height: 1;
+		letter-spacing: -.03em;
+		margin-bottom: .4rem;
+	}
+}
+.brand-item{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 48px;
+}
+.pb-categorytab{
+	.product-miniature{
+		margin-bottom: 0;
+	}
+	.nav.nav-tabs{
+		margin-bottom: .8rem;
+		.nav-item{
+			+ .nav-item{
+			 	margin-left: .2rem;
+			}
+			.nav-link {
+				font-size: 1.4rem;
+				text-transform: uppercase;
+				font-weight: 400;
+				padding: .45rem 1rem;
+				letter-spacing: -.01em;
+				position: relative;
+				&.active{
+					color: $primary-color;
+				}
+				&::before{
+					background-color: $primary-color;
+				}
+			}
+		}
+	}
+}
+.icon-box-side{
+	.pb-service-box{
+		.pb-service-content{
+			.pb-service-title {
+			    font-size: 1.6rem;
+			    letter-spacing: -.01em;
+			    margin-bottom: .5rem;
+			}
+		}
+	}
+	
+	p {
+		font-size: 1.6rem;
+		font-weight: 300;
+		letter-spacing: -.01em;
 	}
 }
 .cta-border-image {
@@ -299,5 +463,10 @@ $secondary-color: #bf913d;
 	.cta-border .cta-heading {
 		flex: 0 0 26.5%;
 		max-width: 26.5%;
+	}
+}
+@media (min-width: 1200px){
+	.h3-deals .btn-more {
+		min-width: 270px;
 	}
 }
