--- a/themes/jms_molla/assets/css/demo-2.css
+++ b/themes/jms_molla/assets/css/demo-2.css
@@ -1283,6 +1283,7 @@ a:focus {
     margin-bottom: 0;
     line-height: 1.3; }
   .h2-banner-type-2 .pb-banner-text .pb-banner-button {
+    color: #fff;
     line-height: 1;
     background: transparent;
     border: 1px solid #fff;
