--- a/themes/jms_molla/assets/scss/demos/demo-2.scss
+++ b/themes/jms_molla/assets/scss/demos/demo-2.scss
@@ -179,6 +179,7 @@ $secondary-color: #c96;
 			line-height: 1.3;
 		}
 		.pb-banner-button{
+			color: #fff;
 			line-height: 1;
 			background: transparent;
 			border: 1px solid #fff;
